style.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container {
    flex: 1;
    display: flex;
    flex-wrap: wrap;
}

.header-and-body-one {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 0 200px;
    background: #1F2937;
}

.header {
    display: flex;
    flex-direction: row;
    height: 70px;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.header-logo {
    display: flex;
    font-size: 24px;
    color: #F9FAF8;
}

.links {
    display: flex;
}

ul {
    display: flex;
    list-style-type: none;
    gap: 15px;
}

a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.body-one {
    display: flex;
    background-color: #1F2937;
    justify-content: space-between;
    align-items: center;
    height: 400px;
    width: 100%;
    gap: 50px;
}

.left-box {
    display: flex;
    flex-direction: column;
    flex-basis: 50%;
    justify-content: center;
    height: 250px;
}

.header-body-one {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 800;
}

.left-box-text {
    font-size: 18px;
    color: #E5E7EB;
}

.button {
    border: none;
    border-radius: 8px;
    background: #3882F6;
    color: white;
    padding: 8px 24px;
    margin: 15px 0;
    width: 100px;
}

.right-box {
    display: flex;
    flex-direction: column;
    flex-basis: 50%;
    justify-content: center;
    align-items: center;
    background-color: #E5E7EB;
    height: 250px;
}

.body-two {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 400px;
    width: 100%;
    text-align: center;
    padding: 0 200px;
}

.header-body-two {
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    margin: 50px 0;
}

.all-info {
    display: flex;
    gap: 50px;
    margin-bottom: 50px;
}

.all-text {
    display: flex;
    gap: 50px;
}

.info-one {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.info-two {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.info-three {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.info-four {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.info {
    border-radius: 25px;
    border: 3px solid #3882F6;
    padding: 20px;
    width: 200px;
    height: 150px;
}

.text {
    width: 200px;
}

.body-three {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 400px;
    width: 100%;
    padding: 0 200px;
    background-color: #E5E7EB;
    flex-wrap: wrap;

    border: 2px dotted green;

}

.quote {
    display: flex;
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
    font-weight: 100;
    width: 80%;
    justify-content: flex-start;

}

.quote-author {
    display: flex;
    width: 100%;
    justify-content: flex-end;
}

.body-four {

}

.footer {

}

